--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-s3": "^3.883.0",
     "@aws-sdk/lib-storage": "^3.883.0",
     "@aws-sdk/s3-request-presigner": "^3.883.0",
+    "@faker-js/faker": "^10.1.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
