--- a/package.json
+++ b/package.json
@@ -22,18 +22,21 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "googleapis": "^165.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "open": "^10.2.0",
     "sequelize": "^6.37.7",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.8.0",
+    "url": "^0.11.4",
     "ws": "^8.18.3"
   },
   "devDependencies": {
