--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "gen": "node swagger-gen.mjs"
+    "gen": "node swagger-gen.mjs",
+    "build:dialer": "esbuild public/dialer.js --bundle --outfile=public/dialer.bundle.js",
+    "dev:dialer": "esbuild public/dialer.js --bundle --outfile=public/dialer.bundle.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +19,14 @@
     "@aws-sdk/lib-storage": "^3.883.0",
     "@aws-sdk/s3-request-presigner": "^3.883.0",
     "@faker-js/faker": "^10.1.0",
+    "@twilio/voice-sdk": "^2.18.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
+    "ejs": "^4.0.1",
     "express": "^4.21.2",
     "googleapis": "^165.0.0",
     "http": "^0.0.1-security",
@@ -40,6 +44,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "esbuild": "^0.27.2",
     "sequelize-cli": "^6.6.3"
   }
 }
